static/pages.css
body {
    font-family: Helvetica, sans-serif;
    background-color: honeydew;
    margin: 0;

    position: relative;
    min-height: 100vh;
}

nav {
    background-color: #2F4F4F;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 100px 100px 130px 130px 100px 50px;
}

nav a {
    text-decoration: none;
    color: white;
}

nav h1 {
    margin: 0;
    font-size: 35px;
    padding: 15px 10px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  overflow: hidden;
  background-color: #F5F5F5;
  padding: 5px 20px;
  z-index: 1;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown-content h3 {
  color: black;
  text-align: left;
}

.dropdown-content h3:last-of-type {
  margin-bottom: 15px;
}

h3 {
  text-align: center;
  font-size: 20px;
  color: white;
}

h3:hover, .active {
  text-decoration: underline;
  text-underline-offset: 10px;
}

input[type=submit] {
  background-color: honeydew;
  padding: 5px;
  margin-bottom: 10px;
  font-size: 18px;
  border: 1px solid black;
}

input[type=submit]:hover {
  background-color: #2F4F4F;
  color: white;
}

img {
  max-width: 50vw;
}

section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  margin: 0 0.5em;
  padding: 1em;
  min-height: 80vh;
}

#p1 {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
}

#p2 {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
}

#p3 {
    grid-column: 2 / 3;
    grid-row: 1 / span 2;
}

#content-wrap {
  padding-bottom: 10rem;
}

footer {
    background-color: #2F4F4F;
    color: white;
    margin-bottom: 0;
    padding: 5px 20px;
    display: grid;
    grid-template-columns: 2fr 175px 100px;
    align-items: center;

    min-height: 8rem;
    height: 10%;
    width: calc(100% - 40px);
    position: absolute;
    bottom: 0;
}
  
footer a {
    color: white;
    display: block;
    text-decoration: none;
}

footer a:hover {
  text-decoration: underline;
}

footer div {
    line-height: 1.5em;
}

#busmodeform {
  visibility: hidden;
  font-size: 1px;
}

#src {
    margin: 1em;
    line-spacing: 20px;
}

